# bad

./: .gitignore  .gitmodules  README.md
implementations/meth1/: .clang-format  .gitignore  Makefile.am  README.md  configure.ac  tune_knobs.hh
implementations/meth1/app/: .gitignore  Makefile.am  Makefile.in  debug.hh  echo_server.cc  imp1.cc  imp1.hh  implementation.hh  meth1.cc  meth1_client.cc  meth1_client_test.cc  meth1_cluster_test.cc  meth1_node.cc  meth1_node_test.cc  meth1_node_test2  meth1_node_test2.cc  meth1_node_test_first  meth1_node_test_first.cc  meth1_node_test_r.cc  meth1_node_test_rw.cc  meth1_shell.cc  meth1_test.cc  node.cc  run.cc  sort_boost.cc  sort_overlap.cc  sort_simple.cc  sort_test.cc  sort_test_cfiles.cc  test.cc
implementations/meth1/contrib/: MemoryPool.tcc
implementations/meth1/doc/: PERFORMANCE.md
implementations/meth1/experiments/: .gitignore  Makefile.am  channels  channels.cc  echo_server.cc  merge_wrapper.hh  pq.hh  priority_queue.cc  r.hh  rec.hh  rec_memcpy.cc  rec_place.cc  sort_basicrts.cc  sort_boost.cc  sort_chunked.cc  sort_chunked_files.cc  sort_chunked_multi.cc  sort_chunked_overlap.cc  sort_chunked_vec  sort_chunked_vec.cc  sort_libc.cc  sort_overlap_channel.cc  sort_overlap_io.cc  sort_pq.cc  sort_pq_overlap.cc  sort_pq_parallel.cc  test_rand.cc
implementations/meth1/experiments/scripts/: Gemfile  fetchAMIHashes.sh
implementations/meth1/experiments/scripts/lib/: ec2.rb  ssh.rb
implementations/meth1/lib/: Makefile.am  address.cc  address.hh  bench.hh  buffered_io.cc  buffered_io.hh  channel.hh  child_process.cc  child_process.hh  circular_io.cc  circular_io.hh  circular_io_rec.hh  domain_socket.cc  domain_socket.hh  event_loop.cc  event_loop.hh  exception.hh  file.cc  file.hh  file_descriptor.cc  file_descriptor.hh  io_device.cc  io_device.hh  iodevice.cc  iodevice.hh  ip.cc  ip.hh  linux_compat.hh  memory_io.hh  netdevice.cc  netdevice.hh  overlapped_io.hh  overlapped_rec_io.hh  pipe.cc  pipe.hh  poller.cc  poller.hh  privs.cc  raw_vector.hh  route.cc  (+13 more)
implementations/meth1/libmeth1/: Makefile.am  client.cc  client.hh  cluster.cc  meth1_memory.cc  node.cc  node.hh  priority_queue.hh  rec_loader.cc  rec_loader.hh  remote_file.hh  rpc.hh
implementations/meth1/libmeth4/: .gitignore  Makefile.am  block.hh  cluster_map.cc  cluster_map.hh  config_file.cc  config_file.hh  disk_writer.cc  disk_writer.hh  meth4_client.cc  meth4_client.hh  meth4_knobs.hh  meth4_node.cc  meth4_util.hh  node_rcp.cc  node_rcp.hh  recv.cc  recv.hh  send.cc  send.hh  sort.cc  sort.hh
implementations/meth1/libsort/: Makefile.am  alloc.cc  alloc.hh  record.hh  record_loc.hh  record_ptr.cc  record_ptr.hh  record_string.cc  record_string.hh  record_t.hh  record_t_shallow.hh
implementations/meth1/libutil/: Makefile.am  address.cc  address.hh  buffered_io.hh  channel.hh  circular_io.cc  circular_io.hh  circular_io_rec.hh  circular_io_var.hh  domain_socket.hh  exception.hh  file.cc  file_descriptor.hh  io_device.cc  io_device.hh  overlapped_io.hh  overlapped_rec_io.hh  poller.cc  raw_vector.hh  socket.cc  socket.hh  sync_print.cc  sync_print.hh  util.cc  util.hh
implementations/meth1/scripts/: gensort_all.sh  setup_all_fs.sh  setup_fs.sh  setup_gfs.sh
implementations/meth1/sort/: Makefile.am  alloc.cc  alloc.hh  record.cc  record.hh  record_common.hh  record_loc.cc  record_loc.hh  record_ptr.hh  record_t.cc  record_t.hh  record_t_shallow.cc  record_t_shallow.hh  scraps.cc
implementations/meth1/stratergies/: Makefile.am  implementation.hh
implementations/meth1/stratergies/meth1/: Makefile.am  boost_d_ary_heap.hh  client.cc  client.hh  client2.cc  client2.hh  cluster.cc  cluster.hh  cluster2.cc  cluster2.hh  meth1_memory.cc  meth1_memory.hh  meth1_merge.hh  node.cc  node.hh  overlapped_io.hh  priority_queue.hh  rec_loader.cc  rec_loader.hh  remote_file.cc  remote_file.hh  remote_file2.hh
implementations/meth1/test/: channels.test  in.s0000.e2000.recs  in.s2000.e3000.recs  meth1_node.out  meth1_node.test  meth1_node_multi.test  meth4_node.test  meth4_node.test.conf  meth4_range.test  ord  out.100.recs  out.s0000.e1000.recs  out.s0000.e2000.recs  sort_basicrts.test  sort_boost.test  sort_libc.test  sort_node.test  sort_node_first.out  sort_node_first.test  sort_node_multi.test  sort_node_r.out  sort_node_r.test  sort_overlap_channel.test  sort_overlap_io.test
implementations/meth1/upstart/: meth1.conf  meth1_node.conf
implementations/meth2/: .gitignore  Makefile.am  README.md  configure.ac  tune_knobs.hh
implementations/meth2/app/: .gitignore  Makefile.am  meth2_client.cc  meth2_client_cdf.cc  meth2_client_test.cc  meth2_node.cc  meth2_node_test_r.cc  meth2_node_test_rw.cc  meth2_shell.cc
implementations/meth2/contrib/: MemoryPool.tcc
implementations/meth2/experiments/: .gitignore  Makefile.am  btree.h  index1.cc  index2.cc  index3.cc  index4.cc  index5.cc  index6.cc  index7.cc  olio.hh  rec.hh  sortperf.cc  threadpool.hh  use_mem.cc
implementations/meth2/lib/: Makefile.am  bench.hh  domain_socket.cc  file.hh  file_descriptor.hh  io_device.cc  io_device.hh  privs.hh  raw_vector.hh  socket.cc  socket.hh  threadpool.hh  timestamp.cc  timestamp.hh  util.cc  util.hh
implementations/meth2/libmeth2/: Makefile.am  circular_aio.cc  circular_aio.hh  client.cc  client.hh  cluster.cc  cluster.hh  node.cc  node.hh  priority_queue.hh  remote_file.cc  remote_file.hh
implementations/meth2/libsort/: Makefile.am  alloc.hh  record.hh  record_common.hh  record_loc.hh  record_ptr.hh  record_t.hh  record_t_shallow.hh
implementations/meth2/libutil/: Makefile.am  buffered_io.cc  buffered_io.hh  channel.hh  circular_io.cc  circular_io_rec.hh  exception.hh  file.cc  file.hh  file_descriptor.cc  file_descriptor.hh  io_device.hh  merge.hh  overlapped_rec_io.hh  poller.hh  socket.cc  socket.hh  util.cc  util.hh
implementations/meth2/scripts/: setup_all_fs.sh  setup_fs.sh
implementations/meth2/sort/: Makefile.am  record.cc  record.hh  record_loc.hh  record_ptr.hh  record_t_shallow.hh
implementations/meth2/upstart/: meth2.conf  meth2_node.conf
(+2245 files in other folders)
