noinst_LIBRARIES = libsourdough.a

libsourdough_a_SOURCES = util.hh util.cc \
	file_descriptor.hh file_descriptor.cc \
	address.hh address.cc \
	socket.hh socket.cc \
	poller.hh poller.cc \
	timestamp.hh timestamp.cc \
	pipe.hh pipe.cc \
	exception.hh \
	child_process.hh child_process.cc \
	signalfd.hh signalfd.cc \
	system_runner.hh system_runner.cc \
	netdevice.hh netdevice.cc \
	event_loop.hh event_loop.cc \
	privs.hh privs.cc \
	route.hh route.cc \
	ip.hh ip.cc \
	domain_socket.hh domain_socket.cc \
	iodevice.hh iodevice.cc \
	file.hh file.cc
