noinst_LTLIBRARIES = libbasicrts.la

libbasicrts_la_SOURCES = util.hh util.cc \
	file_descriptor.hh file_descriptor.cc \
	address.hh address.cc \
	socket.hh socket.cc \
	poller.hh poller.cc \
	timestamp.hh timestamp.cc \
	pipe.hh pipe.cc \
	exception.hh \
	privs.hh privs.cc \
	domain_socket.hh domain_socket.cc \
	file.hh file.cc \
	buffered_io.hh
