noinst_LTLIBRARIES = libbasicrts.la

libbasicrts_la_SOURCES = \
	address.hh address.cc \
	bench.hh \
	buffered_io.hh buffered_io.cc \
	domain_socket.hh domain_socket.cc \
	exception.hh \
	file.hh file.cc \
	file_descriptor.hh file_descriptor.cc \
	io_device.hh io_device.cc \
	pipe.hh pipe.cc \
	poller.hh poller.cc \
	privs.hh privs.cc \
	socket.hh socket.cc \
	timestamp.hh timestamp.cc \
	util.hh util.cc
