noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
	address.hh address.cc \
	bench.hh \
	buffered_io.hh buffered_io.cc \
	circular_io.cc \
	domain_socket.hh domain_socket.cc \
	exception.hh \
	file.hh file.cc \
	file_descriptor.hh file_descriptor.cc \
	io_device.hh io_device.cc \
	linux_compat.hh \
	memory_io.hh overlapped_io.hh overlapped_rec_io.hh \
	pipe.hh pipe.cc \
	poller.hh poller.cc \
	privs.hh privs.cc \
	raw_vector.hh \
	socket.hh socket.cc \
	timestamp.hh timestamp.cc \
	threadpool.hh \
	util.hh util.cc
